--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,42 +6,42 @@
 #    By: lginer-m <lginer-m@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/30 18:27:08 by lginer-m          #+#    #+#              #
-#    Updated: 2024/09/30 19:52:19 by lginer-m         ###   ########.fr        #
+#    Updated: 2024/10/04 19:26:17 by lginer-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = so_long
 
-CFLAGS = -g -Wall -Werror -Wextra \
-		#-g -fsanitize=address,undefined \
+CC = clang
+CFLAGS = -Wall -Werror -Wextra \
+		#-gcc -fsanitize=address,undefined \
 		#-Wunreachable-code -Ofast \
 
 
-MLX_DIR = ./MLX42/build
+MLX_DIR = MLX42/build
 MLX		= $(MLX_DIR)/libmlx42.a
-LINK	= -ldl -lglfw -lpthread -lm
+LINK	= -ldl -lglfw -lpthread -lm -fPIE
 
-LIBFT_DIR = ./Libft
+LIBFT_DIR = Libft
 LIBFT = $(LIBFT_DIR)/libft.a
 
 HEADERS = -I$(LIBFT) -I$(MLX)
 
-SRCS = archives/get_next_line_bonus.c \
-archives/main.c \
-
+SRCS = src/get_next_line_utils_bonus.c src/get_next_line_bonus.c \
+		src/main.c src/base_map.c
 
 OBJS = ${SRCS:.c=.o}
 
 all: mlx42 libft $(NAME)
 libft:
-	@make -C $(LIBFT_DIR)
+	make -C $(LIBFT_DIR)
 mlx42:
 	@make -C $(MLX_DIR)
 
 %.o: %.c
-	@$(CC) $(CFLAGS) -o $@ -c $< $(HEADERS)
+	@$(CC) $(CFLAGS) $(HEADERS) -o $@ -c $< 
 $(NAME): $(OBJS)
-	@$(CC) $(CFLAGS) $(OBJS) $(LIBFT) $(MLX) $(HEADERS) $(LINK) -o $(NAME)
+	@$(CC) $(CFLAGS) $(HEADERS) $(OBJS) $(LIBFT) $(MLX) $(LINK) -o $(NAME)
 	@echo "Compiling So_long..."
 
 clean:
